# pvpf

./: .gitignore  CMakeLists.txt  README.md  coverage.sh  mcov.sh  munit_test.sh  system_test.sh  unit_test.sh
cmake/modules/: FindBoost.cmake  FindCUDA.cmake  FindOpenCV.cmake
include/: config_reader.h
include/pvpf/: config_reader.h  config_validator.h  pvpf.h  pvpf.hpp  validation_rule.h
include/pvpf/config/: config_reader.h  config_reader.hpp  config_validator.h  config_validator.hpp  validation_rule.h  validation_rule.hpp
include/pvpf/data_io/: buffer.h  buffer.hpp  factory.h  factory.hpp  io_pipe.h  io_pipe.hpp
include/pvpf/task_execution/: body.hpp  context_generator.hpp  executable.hpp  memory_manager.hpp  memory_utils.hpp  scheduler.hpp  scheduler.logical_node.hpp
include/pvpf/utils/: data_bucket.h  data_bucket.hpp
pvpf_algorithm/: empty_body.json  executable_test.json  gpu_false.json  happy_case.json  lack_body.json  lack_input.json  lack_output.json  no_gpu.json
src/: config_reader.cpp  config_validator.cpp  main.cpp  validation_rule.cpp
src/config/: config_reader.cpp  config_validator.cpp  validation_rule.cpp
src/data_io/: buffer.cpp
src/os_agnostic/: dynamic_lib_func_manager.cpp
src/task_execution/: body.cpp  body_template.cpp  context_generator.cpp  executable.cpp  memory_manager.cpp  memory_utils.cpp  scheduler.cpp  scheduler.logical_node.cpp
system_test/: CMakeLists.txt  configuration_file_validity_check.cpp  data_io.cpp  framework.cpp  test_main.cpp
system_test/test_algorithms/: libnode1.dylib  libnode2.dylib  libnode3.dylib  libnode4.dylib  libnode5.dylib  libsink.dylib  libsource1.dylib  libsource2.dylib  node1.json  node2.json  node3.json  node4.json  node5.json  project_conf_sample.json  sink.json  source1.json  source2.json  weight_tv.json
system_test/test_algorithms/io/: io_lib.dylib
system_test/test_algorithms/pvpf_algorithms/opencv_filter2d/: config.json  opencv.dylib
system_test/test_algorithms/pvpf_algorithms/weight_east_tv/: config.json
system_test/test_algorithms/pvpf_algorithms/weight_north_tv/: config.json
system_test/test_algorithms/pvpf_algorithms/weight_south_tv/: config.json
system_test/test_algorithms/pvpf_algorithms/weight_west_tv/: config.json  weight_tv.dylib
system_test/test_json/algorithm_configuration/: algorithm_not_found.json
system_test/test_json/framework_configuration/: duplicate_node_id.json  empty_graph.json  empty_sink.json  empty_source.json  graph_missing_algorithm.json  graph_missing_input.json  graph_missing_task.json  happy_case.json  invalid_data_type.json  invalid_json.json  lack_node_id.json  mapping_error.json  number_of_successor_exceed.json  omit_graph.json  omit_sink.json  omit_source.json  predecessor_not_found.json  sink_missing_input.json  sink_missing_task.json  source_missing_output.json  source_missing_task_field.json  unfit_node.json
systemtest/: CMakeLists.txt  data_io.cpp  test_demo.cpp
systemtest/test_json/: empty_graph.json  empty_sink.json  empty_source.json  happy_case.json  omit_graph.json  omit_sink.json  omit_source.json
test/: test_demo.cpp
unit_test/: CMakeLists.txt  config.config_reader.cpp  config.config_validator.cpp  config.validation_rule.cpp  data_io.buffer.cpp  os_agnostic.dynamic_lib_func_manager.cpp  task_execution.create_executable.cpp  task_execution.executable.cpp  task_execution.memory_manager.cpp  task_execution.memory_util.cpp  task_execution.memory_utils.cpp  task_execution.scheduler.cpp  task_execution.scheduler.logical_node.cpp  test_demo.cpp  test_main.cpp  utils.data_bucket.cpp
unit_test/test_dylib/: algorithm.dylib  algorithm2.dylib  algorithm3.dylib  io_lib.dylib  io_lib2.dylib
unit_test/test_json/: context.json  executable.json  read_json.json
unittest/: CMakeLists.txt  config.config_reader.cpp  config.config_validator.cpp  config.validation_rule.cpp  data_io.buffer.cpp
